--- a/portfolio.html
+++ b/portfolio.html
@@ -26,76 +26,15 @@
             >Web<span class="logo__secondary-part">Studio</span></a
           >
           <!-- Mobile-menu-button -->
-          <button
-            type="button"
-            class="menu-button is-open"
-            aria-expanded="true"
-            aria-controls="menu-container"
-            data-menu-button
-          >
+          <button class="mobile-btn js-open-menu" aria-expanded="false">
             <svg class="mobile-btn-icon" width="24px" height="16px">
-              <use
-                class="mobile-btn-icon__menu"
-                href="./images/symbol-defs.svg#icon-mobile-btn-icon"
-              ></use>
-              <use class="mobile-btn-icon__close" href="./images/symbol-defs.svg#icon-close"></use>
+              <use href="./images/symbol-defs.svg#icon-mobile-btn-icon"></use>
             </svg>
           </button>
-          <!-- Mobile-menu-container -->
-          <div class="menu-container" id="menu-container" data-menu>
-            <!-- Mobile-menu-navigation -->
-            <div class="menu-nav">
-              <ul class="menu-nav__list">
-                <li class="menu-nav__item">
-                  <a class="menu-nav__link" href="./index.html">Студія</a>
-                </li>
-                <li class="menu-nav__item">
-                  <a class="menu-nav__link menu-nav__link--current" href="./portfolio.html">Портфоліо</a>
-                </li>
-                <li class="menu-nav__item">
-                  <a class="menu-nav__link" href="">Контакти</a>
-                </li>
-              </ul>
-            </div>
-            <!-- Mobile-menu-contacts -->
-            <div class="menu-contacts">
-              <ul class="menu-contacts__list">
-                <li class="menu-contacts__item">
-                  <a
-                    class="menu-contacts__link menu-contacts__link--mobile"
-                    href="tel:+380961111111"
-                    >+38 096 111 11 11
-                  </a>
-                </li>
-                <li class="menu-contacts__item">
-                  <a class="menu-contacts__link" href="mailto:info@devstudio.com"
-                    >info@devstudio.com
-                  </a>
-                </li>
-              </ul>
-            </div>
-            <!-- Mobile-menu-socials -->
-            <div class="menu-socials">
-              <ul class="menu-socials__list">
-                <li class="menu-socials__item">
-                  <a class="menu-socials__link" href="">Instagram</a>
-                </li>
-                <li class="menu-socials__item">
-                  <a class="menu-socials__link" href="">Twitter</a>
-                </li>
-                <li class="menu-socials__item">
-                  <a class="menu-socials__link" href="">Facebook</a>
-                </li>
-                <li class="menu-socials__item">
-                  <a class="menu-socials__link" href="">LinkedIn</a>
-                </li>
-              </ul>
-            </div>
-          </div>
           <!-- Tablet,Desktop-navigation -->
           <ul class="nav__list">
             <li class="nav__item">
-              <a class="nav__link"  href="./index.html">Студія</a>
+              <a class="nav__link" href="./index.html">Студія</a>
             </li>
             <li class="nav__item"><a class="nav__link nav__link--current" href="./portfolio.html">Портфоліо</a></li>
             <li class="nav__item"><a class="nav__link" href="">Контакти</a></li>
@@ -493,6 +432,65 @@
       </div>
     </footer>
 
+    <!-- MOBILE_MENU -->
+    <div class="backdrop backdrop--is-hidden js-menu-container">
+      <!-- Mobile-menu-container -->
+      <div class="mobile-menu">
+        <button class="mobile-menu-btn js-close-menu" type="button">
+          <svg class="mobile-btn-icon" width="24px" height="16px">
+            <use href="./images/symbol-defs.svg#icon-close"></use>
+          </svg>
+        </button>
+        <!-- Mobile-menu-navigation -->
+        <div class="mobile-menu-nav">
+          <ul class="mobile-menu-nav__list">
+            <li class="mobile-menu-nav__item">
+              <a class="mobile-menu-nav__link" href="./index.html"
+                >Студія</a
+              >
+            </li>
+            <li class="mobile-menu-nav__item">
+              <a class="mobile-menu-nav__link mobile-menu-nav__link--current" href="./portfolio.html">Портфоліо</a>
+            </li>
+            <li class="mobile-menu-nav__item">
+              <a class="mobile-menu-nav__link" href="">Контакти</a>
+            </li>
+          </ul>
+        </div>
+       <!-- Mobile-menu-contacts -->
+        <div class="mobile-menu-contacts">
+          <ul class="mobile-menu-contacts__list">
+            <li class="mobile-menu-contacts__item">
+              <a
+                class="mobile-menu-contacts__link mobile-menu-contacts__link--mobile"
+                href="tel:+380961111111"
+                >+38 096 111 11 11
+              </a>
+            </li>
+            <li class="mobile-menu-contacts__item">
+              <a class="mobile-menu-contacts__link" href="mailto:info@devstudio.com"
+                >info@devstudio.com
+              </a>
+            </li>
+          </ul>
+         <!-- Mobile-menu-socials -->
+          <ul class="mobile-menu-socials__list">
+            <li class="mobile-menu-socials__item">
+              <a class="mobile-menu-socials__link" href="">Instagram</a>
+            </li>
+            <li class="mobile-menu-socials__item">
+              <a class="mobile-menu-socials__link" href="">Twitter</a>
+            </li>
+            <li class="mobile-menu-socials__item">
+              <a class="mobile-menu-socials__link" href="">Facebook</a>
+            </li>
+            <li class="mobile-menu-socials__item">
+              <a class="mobile-menu-socials__link" href="">LinkedIn</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    <!-- Script -->
     <script
       defer
       src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
@@ -500,5 +498,15 @@
       crossorigin="anonymous"
     ></script>
     <script defer src="js/mobile-menu.js"></script>
+
+    <script>
+      (() => {
+        document.querySelector('.js-speaker-form').addEventListener('submit', e => {
+          e.preventDefault();
+
+          new FormData(e.currentTarget).forEach((value, name) => console.log(`${name}: ${value}`));
+        });
+      })();
+    </script>
   </body>
 </html>
