--- a/index.html
+++ b/index.html
@@ -627,13 +627,11 @@
               <use class="register__uncheck" href="./images/symbol-defs.svg#icon-unchecked"></use>
               <use class="register__check" href="./images/symbol-defs.svg#icon-checked"></use>
             </svg>
-            <span class="register__text-lable register__text-lable--mobile"
-              >Погоджуюся з розсилкою та приймаю
-              <a class="register__text-link" href="" target="_blank">Умови договору</a>
+            <span class="register__text-label"
+              >Погоджуюся з розсилкою та приймаю <a class="register__text-link" href="" target="_blank">Умови договору</a>
             </span>
           </label>
-
-          <button class="register__btn" type="submit">Відправити</button>
+              <button class="register__btn" type="submit">Відправити</button>
         </form>
       </div>
     </div>
