--- a/index.html
+++ b/index.html
@@ -612,9 +612,7 @@
                 class="register__message"
                 name="user-message"
                 rows="5"
-                placeholder="Введіть текст"
-              >
-              </textarea>
+                placeholder="Введіть текст"></textarea>
             </label>
           </div>
           <label class="register__agreement">
