--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </button>
       </section>
       <!-- OUR ADVANTAGES -->
-      <section class="advantages section">
+      <section class="advantages">
         <div class="container">
           <h2 class="advantages__title visually-hidden">Наші переваги</h2>
           <ul class="advantages__list card-set">
@@ -80,7 +80,7 @@
                 </svg>
               </div>
               <h3 class="advantages__heading">УВАГА ДО ДЕТАЛЕЙ</h3>
-              <p class="adventages__text">
+              <p class="advantages__text">
                 Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
               </p>
             </li>
@@ -121,13 +121,25 @@
         </div>
       </section>
       <!-- WHAT WE DO -->
-      <section class="examples section">
+      <section class="examples">
         <div class="container">
           <h2 class="examples__heading">Чим ми займаємося</h2>
           <ul class="examples__list card-set">
             <li class="examples__item card-set__item">
               <div class="examples__content">
-                <img src="./images/computer.jpg" alt="computer" width="370" />
+                <picture>
+                <source
+                  media="(min-width: 1200px)"
+                  srcset="./images/examples/examples-1@1x_lg.jpg 1x, images/examples/examples-1@2x_lg.jpg 2x"
+                />
+                <img
+                  src="./images/examples/examples-1@1x_lg.jpg"
+                  alt="Desktop applications"
+                  width="370"
+                  height="294"
+                  loading="lazy"
+                />
+              </picture>
                 <div class="examples__overlay">
                   <h3 class="examples__subtitle">Десктопні додатки</h3>
                 </div>
@@ -135,7 +147,19 @@
             </li>
             <li class="examples__item card-set__item">
               <div class="examples__content">
-                <img src="./images/laptop.jpg" alt="laptop" width="370" />
+                <picture>
+                <source
+                  media="(min-width: 1200px)"
+                  srcset="./images/examples/examples-2@1x_lg.jpg 1x, images/examples/examples-2@2x_lg.jpg 2x"
+                />
+                <img
+                  src="./images/examples/examples-2@1x_lg.jpg"
+                  alt="Mobile applications"
+                  width="370"
+                  height="294"
+                  loading="lazy"
+                />
+              </picture>
                 <div class="examples__overlay">
                   <h3 class="examples__subtitle">Мобільні додатки</h3>
                 </div>
@@ -143,7 +167,19 @@
             </li>
             <li class="examples__item card-set__item">
               <div class="examples__content">
-                <img src="./images/smartphone.jpg" alt="smartphone" width="370" />
+                <picture>
+                <source
+                  media="(min-width: 1200px)"
+                  srcset="./images/examples/examples-3@1x_lg.jpg 1x, images/examples/examples-3@2x_lg.jpg 2x"
+                />
+                <img
+                  src="./images/examples/examples-3@1x_lg.jpg"
+                  alt="Design solutions"
+                  width="370"
+                  height="294"
+                  loading="lazy"
+                />
+              </picture>
                 <div class="examples__overlay">
                   <h3 class="examples__subtitle">Дизайнерські рішення</h3>
                 </div>
@@ -153,26 +189,38 @@
         </div>
       </section>
       <!-- OUR TEAM -->
-      <section class="team section">
+      <section class="team">
         <div class="container">
           <h2 class="team__title">Наша команда</h2>
           <ul class="team__list card-set">
             <li class="team__item card-set__item">
-              <img
-                srcset="
-                  ./images/foto-demianenko/foto-demianenko-270.jpg 270w,
-                  ./images/foto-demianenko/foto-demianenko-354.jpg 354w,
-                  ./images/foto-demianenko/foto-demianenko-450.jpg 450w
-                "
-                sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px"
-                src="./images/foto-demianenko/foto-demianenko-450.jpg"
-                alt="foto-product-designer"
-              />
+              <picture>
+                <source
+                  media="(min-width: 1200px)"
+                  srcset="./images/team/team-1@1x_lg.jpg 1x, images/team/team-1@2x_lg.jpg 2x"
+                />
+                <source
+                  media="(min-width: 768px)"
+                  srcset="./images/team/team-1@1x_md.jpg 1x, images/team/team-1@2x_md.jpg 2x"
+                />
+                <source
+                  media="(max-width: 767px)"
+                  srcset="./images/team/team-1@1x_sm.jpg 1x, images/team/team-1@2x_sm.jpg 2x"
+                />
+                <img
+                  src="./images/team/team-1@1x_sm.jpg"
+                  alt="Igor Demianenko"
+                  width="450"
+                  height="460"
+                  loading="lazy"
+                />
+              </picture>
+             
               <div class="team__wrap">
                 <h3 class="team__name">Ігор Дем'яненко</h3>
                 <p class="team__position">Product Designer</p>
-                <ul class="socials list">
-                  <li class="socials__item item">
+                <ul class="socials">
+                  <li class="socials__item ">
                     <a
                       class="socials__link"
                       href="https://www.instagram.com"
@@ -184,7 +232,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li class="socials__item item">
+                  <li class="socials__item">
                     <a
                       class="socials__link"
                       href="https://www.twitter.com"
@@ -196,7 +244,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li class="socials__item item">
+                  <li class="socials__item">
                     <a
                       class="socials__link"
                       href="https://www.facebook.com"
@@ -208,14 +256,14 @@
                       </svg>
                     </a>
                   </li>
-                  <li class="socials__item item">
+                  <li class="socials__item">
                     <a
                       class="socials__link"
                       href="https://www.linkedin.com"
                       target="_blank"
                       rel="nofollow noopener noreferrer"
                     >
-                      <svg class="network-icons item" width="20" height="20">
+                      <svg class="network-icons" width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -224,21 +272,32 @@
               </div>
             </li>
             <li class="team__item card-set__item">
-              <img
-                srcset="
-                  ./images/foto-repina/foto-repina-270.jpg 270w,
-                  ./images/foto-repina/foto-repina-354.jpg 354w,
-                  ./images/foto-repina/foto-repina-450.jpg 450w
-                "
-                sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px"
-                src="./images/foto-repina/foto-repina-450.jpg"
-                alt="foto-product-designer"
-              />
+              <picture>
+                <source
+                  media="(min-width: 1200px)"
+                  srcset="./images/team/team-2@1x_lg.jpg 1x, images/team/team-2@2x_lg.jpg 2x"
+                />
+                <source
+                  media="(min-width: 768px)"
+                  srcset="./images/team/team-2@1x_md.jpg 1x, images/team/team-2@2x_md.jpg 2x"
+                />
+                <source
+                  media="(max-width: 767px)"
+                  srcset="./images/team/team-2@1x_sm.jpg 1x, images/team/team-2@2x_sm.jpg 2x"
+                />
+                <img
+                  src="./images/team/team-2@1x_sm.jpg"
+                  alt="Olga Repina"
+                  width="450"
+                  height="460"
+                  loading="lazy"
+                />
+              </picture>
               <div class="team__wrap">
                 <h3 class="team__name">Ольга Рєпіна</h3>
                 <p class="team__position">Frontend Developer</p>
                 <ul class="socials list">
-                  <li class="socials__item item">
+                  <li class="socials__item">
                     <a
                       class="socials__link"
                       href="https://www.instagram.com"
@@ -250,7 +309,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li class="socials__item item">
+                  <li class="socials__item">
                     <a
                       class="socials__link"
                       href="https://www.twitter.com"
@@ -262,7 +321,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li class="socials__item item">
+                  <li class="socials__item">
                     <a
                       class="socials__link"
                       href="https://www.facebook.com"
@@ -274,14 +333,14 @@
                       </svg>
                     </a>
                   </li>
-                  <li class="socials__item item">
+                  <li class="socials__item">
                     <a
                       class="socials__link"
                       href="https://www.linkedin.com"
                       target="_blank"
                       rel="nofollow noopener noreferrer"
                     >
-                      <svg class="network-icons item" width="20" height="20">
+                      <svg class="network-icons" width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -290,21 +349,32 @@
               </div>
             </li>
             <li class="team__item card-set__item">
-              <img
-                srcset="
-                  ./images/foto-tarasov/foto-tarasov-270.jpg 270w,
-                  ./images/foto-tarasov/foto-tarasov-354.jpg 354w,
-                  ./images/foto-tarasov/foto-tarasov-450.jpg 450w
-                "
-                sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px"
-                src="./images/foto-tarasov/foto-tarasov-450.jpg"
-                alt="foto-product-designer"
-              />
+              <picture>
+                <source
+                  media="(min-width: 1200px)"
+                  srcset="./images/team/team-3@1x_lg.jpg 1x, images/team/team-3@2x_lg.jpg 2x"
+                />
+                <source
+                  media="(min-width: 768px)"
+                  srcset="./images/team/team-3@1x_md.jpg 1x, images/team/team-3@2x_md.jpg 2x"
+                />
+                <source
+                  media="(max-width: 767px)"
+                  srcset="./images/team/team-3@1x_sm.jpg 1x, images/team/team-3@2x_sm.jpg 2x"
+                />
+                <img
+                  src="./images/team/team-3@1x_sm.jpg"
+                  alt="Mykola Tarasov"
+                  width="450"
+                  height="460"
+                  loading="lazy"
+                />
+              </picture>
               <div class="team__wrap">
                 <h3 class="team__name">Микола Тарасов</h3>
                 <p class="team__position">Marketing</p>
                 <ul class="socials list">
-                  <li class="socials__item item">
+                  <li class="socials__item">
                     <a
                       class="socials__link"
                       href="https://www.instagram.com"
@@ -316,7 +386,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li class="socials__item item">
+                  <li class="socials__item">
                     <a
                       class="socials__link"
                       href="https://www.twitter.com"
@@ -328,7 +398,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li class="socials__item item">
+                  <li class="socials__item">
                     <a
                       class="socials__link"
                       href="https://www.facebook.com"
@@ -340,14 +410,14 @@
                       </svg>
                     </a>
                   </li>
-                  <li class="socials__item item">
+                  <li class="socials__item">
                     <a
                       class="socials__link"
                       href="https://www.linkedin.com"
                       target="_blank"
                       rel="nofollow noopener noreferrer"
                     >
-                      <svg class="network-icons item" width="20" height="20">
+                      <svg class="network-icons" width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -356,21 +426,32 @@
               </div>
             </li>
             <li class="team__item card-set__item">
-              <img
-                srcset="
-                  ./images/foto-ermakov/foto-ermakov-270.jpg 270w,
-                  ./images/foto-ermakov/foto-ermakov-354.jpg 354w,
-                  ./images/foto-ermakov/foto-ermakov-450.jpg 450w
-                "
-                sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px"
-                src="./images/foto-ermakov/foto-ermakov-450.jpg"
-                alt="foto-product-designer"
-              />
+               <picture>
+                <source
+                  media="(min-width: 1200px)"
+                  srcset="./images/team/team-4@1x_lg.jpg 1x, images/team/team-4@2x_lg.jpg 2x"
+                />
+                <source
+                  media="(min-width: 768px)"
+                  srcset="./images/team/team-4@1x_md.jpg 1x, images/team/team-4@2x_md.jpg 2x"
+                />
+                <source
+                  media="(max-width: 767px)"
+                  srcset="./images/team/team-4@1x_sm.jpg 1x, images/team/team-4@2x_sm.jpg 2x"
+                />
+                <img
+                  src="./images/team/team-4@1x_sm.jpg"
+                  alt="Mykhailo Yermakov"
+                  width="450"
+                  height="460"
+                  loading="lazy"
+                />
+              </picture>
               <div class="team__wrap">
                 <h3 class="team__name">Михайло Єрмаков</h3>
                 <p class="team__position">UI Designer</p>
-                <ul class="socials list">
-                  <li class="socials__item item">
+                <ul class="socials">
+                  <li class="socials__item">
                     <a
                       class="socials__link"
                       href="https://www.instagram.com"
@@ -382,7 +463,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li class="socials__item item">
+                  <li class="socials__item">
                     <a
                       class="socials__link"
                       href="https://www.twitter.com"
@@ -394,7 +475,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li class="socials__item item">
+                  <li class="socials__item">
                     <a
                       class="socials__link"
                       href="https://www.facebook.com"
@@ -406,14 +487,14 @@
                       </svg>
                     </a>
                   </li>
-                  <li class="socials__item item">
+                  <li class="socials__item">
                     <a
                       class="socials__link"
                       href="https://www.linkedin.com"
                       target="_blank"
                       rel="nofollow noopener noreferrer"
                     >
-                      <svg class="socials__icon item" width="20" height="20">
+                      <svg class="socials__icon" width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -498,10 +579,10 @@
           </address>
         </div>
         <!-- Footer-  networks -->
-        <div class="footer__networks footer__networks--mobile item">
+        <div class="footer__networks footer__networks--mobile">
           <p class="footer__desc footer__desc--mobile">приєднуйтесь</p>
-          <ul class="socials list">
-            <li class="socials__item item">
+          <ul class="socials">
+            <li class="socials__item">
               <a
                 class="socials__link socials__link--dark"
                 href="https://www.instagram.com"
@@ -513,7 +594,7 @@
                 </svg>
               </a>
             </li>
-            <li class="socials__item item">
+            <li class="socials__item ">
               <a
                 class="socials__link socials__link--dark"
                 href="https://www.twitter.com"
@@ -525,7 +606,7 @@
                 </svg>
               </a>
             </li>
-            <li class="socials__item item">
+            <li class="socials__item">
               <a
                 class="socials__link socials__link--dark"
                 href="https://www.facebook.com"
@@ -537,14 +618,14 @@
                 </svg>
               </a>
             </li>
-            <li class="socials__item item">
+            <li class="socials__item">
               <a
                 class="socials__link socials__link--dark"
                 href="https://www.linkedin.com"
                 target="_blank"
                 rel="nofollow noopener noreferrer"
               >
-                <svg class="network-icons item" width="20" height="20">
+                <svg class="network-icons" width="20" height="20">
                   <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                 </svg>
               </a>
