--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
         </div>
       </section>
       <!-- REGULAR-CLIENTS -->
-      <section class="clients section">
+      <section class="clients">
         <div class="container">
           <h2 class="clients__title">Постійні клієнти</h2>
           <ul class="clients__list card-set">
