--- a/index.html
+++ b/index.html
@@ -580,7 +580,7 @@
           </address>
         </div>
         <!-- Footer-networks -->
-        <div class="footer__networks footer__networks--mobile">
+        <div class="footer__networks">
           <p class="footer__desc footer__desc--mobile">приєднуйтесь</p>
           <ul class="socials">
             <li class="socials__item">
@@ -634,11 +634,10 @@
           </ul>
         </div>
         <!-- Subscription -->
-        <div class="subscription">
+        <div class="footer__subscription">
           <label class="subscription__form">
-            <span class="subscription__label subscription__label--mobile"
-              >Підпишіться на розсилку</span
-            >
+            <span class="subscription__label"
+              >Підпишіться на розсилку</span>
             <input
               class="subscription__input"
               type="email"
