--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head> 
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -128,18 +128,21 @@
             <li class="examples__item card-set__item">
               <div class="examples__content">
                 <picture>
-                <source
-                  media="(min-width: 1200px)"
-                  srcset="./images/examples/examples-1@1x_lg.jpg 1x, images/examples/examples-1@2x_lg.jpg 2x"
-                />
-                <img
-                  src="./images/examples/examples-1@1x_lg.jpg"
-                  alt="Desktop applications"
-                  width="370"
-                  height="294"
-                  loading="lazy"
-                />
-              </picture>
+                  <source
+                    media="(min-width: 1200px)"
+                    srcset="
+                      ./images/examples/examples-1@1x_lg.jpg 1x,
+                      images/examples/examples-1@2x_lg.jpg   2x
+                    "
+                  />
+                  <img
+                    src="./images/examples/examples-1@1x_lg.jpg"
+                    alt="Desktop applications"
+                    width="370"
+                    height="294"
+                    loading="lazy"
+                  />
+                </picture>
                 <div class="examples__overlay">
                   <h3 class="examples__subtitle">Десктопні додатки</h3>
                 </div>
@@ -148,18 +151,21 @@
             <li class="examples__item card-set__item">
               <div class="examples__content">
                 <picture>
-                <source
-                  media="(min-width: 1200px)"
-                  srcset="./images/examples/examples-2@1x_lg.jpg 1x, images/examples/examples-2@2x_lg.jpg 2x"
-                />
-                <img
-                  src="./images/examples/examples-2@1x_lg.jpg"
-                  alt="Mobile applications"
-                  width="370"
-                  height="294"
-                  loading="lazy"
-                />
-              </picture>
+                  <source
+                    media="(min-width: 1200px)"
+                    srcset="
+                      ./images/examples/examples-2@1x_lg.jpg 1x,
+                      images/examples/examples-2@2x_lg.jpg   2x
+                    "
+                  />
+                  <img
+                    src="./images/examples/examples-2@1x_lg.jpg"
+                    alt="Mobile applications"
+                    width="370"
+                    height="294"
+                    loading="lazy"
+                  />
+                </picture>
                 <div class="examples__overlay">
                   <h3 class="examples__subtitle">Мобільні додатки</h3>
                 </div>
@@ -168,18 +174,21 @@
             <li class="examples__item card-set__item">
               <div class="examples__content">
                 <picture>
-                <source
-                  media="(min-width: 1200px)"
-                  srcset="./images/examples/examples-3@1x_lg.jpg 1x, images/examples/examples-3@2x_lg.jpg 2x"
-                />
-                <img
-                  src="./images/examples/examples-3@1x_lg.jpg"
-                  alt="Design solutions"
-                  width="370"
-                  height="294"
-                  loading="lazy"
-                />
-              </picture>
+                  <source
+                    media="(min-width: 1200px)"
+                    srcset="
+                      ./images/examples/examples-3@1x_lg.jpg 1x,
+                      images/examples/examples-3@2x_lg.jpg   2x
+                    "
+                  />
+                  <img
+                    src="./images/examples/examples-3@1x_lg.jpg"
+                    alt="Design solutions"
+                    width="370"
+                    height="294"
+                    loading="lazy"
+                  />
+                </picture>
                 <div class="examples__overlay">
                   <h3 class="examples__subtitle">Дизайнерські рішення</h3>
                 </div>
@@ -215,12 +224,12 @@
                   loading="lazy"
                 />
               </picture>
-             
+
               <div class="team__wrap">
                 <h3 class="team__name">Ігор Дем'яненко</h3>
                 <p class="team__position">Product Designer</p>
                 <ul class="socials">
-                  <li class="socials__item ">
+                  <li class="socials__item">
                     <a
                       class="socials__link"
                       href="https://www.instagram.com"
@@ -426,7 +435,7 @@
               </div>
             </li>
             <li class="team__item card-set__item">
-               <picture>
+              <picture>
                 <source
                   media="(min-width: 1200px)"
                   srcset="./images/team/team-4@1x_lg.jpg 1x, images/team/team-4@2x_lg.jpg 2x"
@@ -555,26 +564,25 @@
       <div class="footer__container container">
         <div class="footer__wrap">
           <a href="./index.html" class="footer__logo logo"
-             >Web<span class="logo__secondary-part logo__secondary-part--light">Studio</span></a
+            >Web<span class="logo__secondary-part logo__secondary-part--light">Studio</span></a
           >
           <!-- Adress -->
           <address class="address">
-            <ul class="address__list ">
+            <ul class="address__list">
               <li class="address__item">
-                <a class="address__link address__link--location" href="https://goo.gl/maps/eeVYJ86fgh2uSBYp6" target="_blank"
-                rel="nofollow noopener noreferrer"
+                <a
+                  class="address__link address__link--location"
+                  href="https://goo.gl/maps/eeVYJ86fgh2uSBYp6"
+                  target="_blank"
+                  rel="nofollow noopener noreferrer"
                   >м. Київ, пр-т Лесі Українки, 26</a
                 >
               </li>
               <li class="address__item">
-                <a class="address__link" href="mailto:info@example.com"
-                  >info@example.com</a
-                >
+                <a class="address__link" href="mailto:info@example.com">info@example.com</a>
               </li>
               <li class="address__item">
-                <a class="address__link" href="tel:+380991111111"
-                  >+38 099 111 11 11</a
-                >
+                <a class="address__link" href="tel:+380991111111">+38 099 111 11 11</a>
               </li>
             </ul>
           </address>
@@ -595,7 +603,7 @@
                 </svg>
               </a>
             </li>
-            <li class="socials__item ">
+            <li class="socials__item">
               <a
                 class="socials__link socials__link--dark"
                 href="https://www.twitter.com"
@@ -636,8 +644,7 @@
         <!-- Subscription -->
         <div class="footer__subscription">
           <label class="subscription__form">
-            <span class="subscription__label"
-              >Підпишіться на розсилку</span>
+            <span class="subscription__label">Підпишіться на розсилку</span>
             <input
               class="subscription__input"
               type="email"
@@ -693,7 +700,8 @@
                 class="register__message"
                 name="user-message"
                 rows="5"
-                placeholder="Введіть текст"></textarea>
+                placeholder="Введіть текст"
+              ></textarea>
             </label>
           </div>
           <label class="register__agreement">
@@ -707,10 +715,11 @@
               <use class="register__check" href="./images/symbol-defs.svg#icon-checked"></use>
             </svg>
             <span class="register__text-label"
-              >Погоджуюся з розсилкою та приймаю <a class="register__text-link" href="" target="_blank">Умови договору</a>
+              >Погоджуюся з розсилкою та приймаю
+              <a class="register__text-link" href="" target="_blank">Умови договору</a>
             </span>
           </label>
-              <button class="register__btn" type="submit">Відправити</button>
+          <button class="register__btn" type="submit">Відправити</button>
         </form>
       </div>
     </div>
@@ -739,7 +748,7 @@
             </li>
           </ul>
         </div>
-       <!-- Mobile-menu-contacts -->
+        <!-- Mobile-menu-contacts -->
         <div class="mobile-menu-contacts">
           <ul class="mobile-menu-contacts__list">
             <li class="mobile-menu-contacts__item">
@@ -755,7 +764,7 @@
               </a>
             </li>
           </ul>
-         <!-- Mobile-menu-socials -->
+          <!-- Mobile-menu-socials -->
           <ul class="mobile-menu-socials__list">
             <li class="mobile-menu-socials__item">
               <a class="mobile-menu-socials__link" href="">Instagram</a>
@@ -772,6 +781,7 @@
           </ul>
         </div>
       </div>
+    </div>
     <!-- Script -->
     <script src="./js/modal.js"></script>
     <script
