--- a/index.html
+++ b/index.html
@@ -767,16 +767,44 @@
           <!-- Mobile-menu-socials -->
           <ul class="mobile-menu-socials__list">
             <li class="mobile-menu-socials__item">
-              <a class="mobile-menu-socials__link" href="">Instagram</a>
+              <a
+                class="mobile-menu-socials__link"
+                href="https://www.instagram.com"
+                target="_blank"
+                rel="nofollow noopener noreferrer"
+                href=""
+                >Instagram</a
+              >
             </li>
             <li class="mobile-menu-socials__item">
-              <a class="mobile-menu-socials__link" href="">Twitter</a>
+              <a
+                class="mobile-menu-socials__link"
+                href="https://www.twitter.com"
+                target="_blank"
+                rel="nofollow noopener noreferrer"
+                href=""
+                >Twitter</a
+              >
             </li>
             <li class="mobile-menu-socials__item">
-              <a class="mobile-menu-socials__link" href="">Facebook</a>
+              <a
+                class="mobile-menu-socials__link"
+                href="https://www.facebook.com"
+                target="_blank"
+                rel="nofollow noopener noreferrer"
+                href=""
+                >Facebook</a
+              >
             </li>
             <li class="mobile-menu-socials__item">
-              <a class="mobile-menu-socials__link" href="">LinkedIn</a>
+              <a
+                class="mobile-menu-socials__link"
+                href="https://www.linkedin.com"
+                target="_blank"
+                rel="nofollow noopener noreferrer"
+                href=""
+                >LinkedIn</a
+              >
             </li>
           </ul>
         </div>
